// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ControlButton > should render 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <button
      class="ring-focus css-1r0gl86"
    />
  </div>
</DocumentFragment>
`;

exports[`ControlButton > should render active 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <button
      class="ring-focus css-1r0gl86"
    />
  </div>
</DocumentFragment>
`;

exports[`ControlButton > should render disabled 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <button
      class="ring-focus css-11tvrbf"
      disabled=""
    />
  </div>
</DocumentFragment>
`;

exports[`ControlButton > should render with dot 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <button
      class="ring-focus css-1r0gl86"
    >
      <div
        class="absolute right-1 top-0.5 flex h-3 w-3 items-center justify-center rounded-full bg-theme-background transition-all duration-100 ease-linear"
      >
        <div
          class="h-2 w-2 rounded-full bg-theme-primary-500"
        />
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`ControlButton > should render without border 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <button
      class="ring-focus css-vthdh6"
    />
  </div>
</DocumentFragment>
`;

exports[`ControlButton > should render without border and with dot 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <button
      class="ring-focus css-vthdh6"
    >
      <div
        class="absolute right-1 top-0.5 flex h-3 w-3 items-center justify-center rounded-full bg-theme-background transition-all duration-100 ease-linear -mr-2.5"
      >
        <div
          class="h-2 w-2 rounded-full bg-theme-primary-500"
        />
      </div>
    </button>
  </div>
</DocumentFragment>
`;
